[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -44.0
margin_right = 512.0
margin_bottom = 20.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version Selector" type="OptionButton" parent="HBoxContainer"]
margin_left = 413.0
margin_right = 533.0
margin_bottom = 64.0
text = "Godot Version"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Launch Version" type="Button" parent="HBoxContainer"]
margin_left = 553.0
margin_right = 610.0
margin_bottom = 64.0
text = "Launch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Versions Request" type="HTTPRequest" parent="."]

[node name="Output" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Confirm Download" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -44.0
margin_right = 192.0
margin_bottom = 57.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Download Godot"
dialog_text = "You are about to download Godot version"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version Download" type="HTTPRequest" parent="."]

[connection signal="item_selected" from="HBoxContainer/Version Selector" to="." method="_on_Version_Selector_item_selected"]
[connection signal="pressed" from="HBoxContainer/Launch Version" to="." method="_on_Launch_Version_pressed"]
[connection signal="request_completed" from="Versions Request" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="confirmed" from="Confirm Download" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="request_completed" from="Version Download" to="." method="_on_Version_Download_request_completed"]
